# checkout-sample-app

./: README.md
ch-openai-checkout-app/: .dockerignore  .gitignore  README.md  pyproject.toml
ch-openai-checkout-app/assets/: shopping-cart.html
ch-openai-checkout-app/shopping_cart_python/: .env  Dockerfile  __init__.py  checkout_completion_data.json  checkout_session_data.json  main.py  models.py  product_data.json  requirements.txt
ch-openai-checkout-ui/: .dockerignore  Dockerfile  README.md  build-all.mts  build-and-push.sh  docker-compose.yml  package.json  vite.config.mts
ch-openai-checkout-ui/assets/: shopping-cart-d51e.css  shopping-cart-d51e.html  shopping-cart-d51e.js  shopping-cart.js.map
ch-openai-checkout-ui/src/shopping-cart/: index.tsx
